# umpyutl

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/umpyutl/: convert.py  http.py  read.py  write.py
tests/: __init__.py  path.py  test_convert_module.py  test_http_module.py  test_pkg.py  test_read_module.py  test_write_module.py
tests/fixtures/: loc.yml  mandela-rivonia_trial-verbatim.txt
tests/output/: crew_members.json  episode_iv_opening_crawl.txt  passengers.csv  vax_counties.csv
umpyutl/: __init__.py  convert.py  http.py  read.py  reader.py  requirements.txt  write.py
umpyutl/http/: get.py
umpyutl/writer/: write.py
