[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umpyutl"
dynamic = ["version"]
description = "Utility classes and functions."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    { name = "Anthony Whyte", email = "anthwhyte@gmail.com" },
]
keywords = [
    "arwhyte",
    "umpyutl",
    "utilities",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyYAML",
    "requests",
]

[project.urls]
Homepage = "https://github.com/umsi-arwhyte/umpyutl"

[tool.black]
line-length = 100

[tool.hatch.version]
path = "src/umpyutl/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.tests",
    "/.venv"
]
include = [
    "src/umpyutl",
]
