[project]
name = "umpyutl"
version = "2.1.1"
description = "Utility classes and functions."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
authors = [{ name = "Anthony Whyte", email = "anthwhyte@gmail.com" }]
keywords = ["arwhyte", "umpyutl", "utilities"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = ["pyyaml>=6.0.3", "requests>=2.32.5"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/umsi-arwhyte/umpyutl"

[tool.ruff]
line-length = 100
